Depth map and panorama stitching implementation; add separate executable modules with dll and input files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-X64
-.vs
+# Visual Studio directories
+**/X64/
+**/Debug/
+**/.vs/
+
+# Visual Studio files
+*.vcxproj.filters
+*.vcxproj.user
+
+# LaTeX tmp files
+*.aux
+*.log
+*.synctex.gz
